Switch email whitelist from authenticator config to realm attributes
Authenticator config was being reset by config-cli on every deploy.
Realm attributes persist in Keycloak's DB and are not overwritten
by config-cli unless explicitly declared in YAML. Admins can now
update the whitelist via the Admin REST API without restarts.