@@ -8,12 +8,12 @@ import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.KeycloakSessionFactory;
 import org.keycloak.provider.ProviderConfigProperty;
 
+import java.util.Collections;
 import java.util.List;
 
 public class EmailWhitelistAuthenticatorFactory implements AuthenticatorFactory {
 
     public static final String PROVIDER_ID = "email-whitelist";
-    public static final String CONFIG_EMAIL_WHITELIST = "emailWhitelist";
     private static final EmailWhitelistAuthenticator SINGLETON = new EmailWhitelistAuthenticator();
 
     @Override
@@ -33,14 +33,14 @@ public class EmailWhitelistAuthenticatorFactory implements AuthenticatorFactory 
 
     @Override
     public String getHelpText() {
-        return "Checks the user's email against a configurable whitelist managed via the Admin Console. "
+        return "Checks the user's email against the 'ssoEmailWhitelist' realm attribute. "
                 + "Supports exact emails and domain wildcards (*@domain). "
-                + "If the whitelist is empty or not configured, all users are allowed.";
+                + "If the attribute is not set, all users are allowed.";
     }
 
     @Override
     public boolean isConfigurable() {
-        return true;
+        return false;
     }
 
     @Override
@@ -63,15 +63,7 @@ public class EmailWhitelistAuthenticatorFactory implements AuthenticatorFactory 
 
     @Override
     public List<ProviderConfigProperty> getConfigProperties() {
-        ProviderConfigProperty whitelistProp = new ProviderConfigProperty();
-        whitelistProp.setName(CONFIG_EMAIL_WHITELIST);
-        whitelistProp.setLabel("Email Whitelist");
-        whitelistProp.setType(ProviderConfigProperty.STRING_TYPE);
-        whitelistProp.setHelpText(
-                "Comma-separated list of allowed email addresses or domain wildcards. "
-                + "Example: user@example.com,*@nasa.gov. "
-                + "If empty, all users are allowed.");
-        return List.of(whitelistProp);
+        return Collections.emptyList();
     }
 
     @Override
